force-app/main/default/objects/SANationalIDSearch__c/SANationalIDSearch__c.object-meta.xml
<CustomObject>
    <label>SA National ID Search</label>
    <nameField>
        <label>SA National ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SA National ID Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>