force-app/main/default/objects/SANationalIDSearch__c/fields/NumberOfSearch__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSearch__c</fullName>
    <label>NumberOfSearch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>