force-app/main/default/objects/SANationalIDSearch__c/fields/SACitizen__c.field-meta.xml
<CustomField>
    <fullName>SACitizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA Citizen</label>
    <type>Checkbox</type>
</CustomField>